# tessera

./: .gitignore  CHANGELOG.md  CITATIONS.md  PHILOSOPHY.md  README.md  pyproject.toml
docs/: aeon-bridge.md  architecture.md  cognitive-traits.md  providers.md  synapse-bridge.md
examples/: auditable_estimator.t.md  causal_reasoner.t.md  coding_agent_mvp.t.md  complaint_router.t.md  contracts.t.md  evolve_researcher.t.md  governed_advisor.t.md  hello.tsr.md  honest_messenger.t.md  introspective_agent.t.md  knowledge_assistant.t.md  knowledge_graph.t.md  migration_advisor.t.md  orchestration.t.md  parallel_team.t.md  perception.t.md  perception.tsr.md  policy_demo.t.md  policy_demo.tsr.md  policy_pii_guard.t.md  prudent_advisor.t.md  research_assistant.t.md  research_assistant.tsr.md  researcher.t.md  researcher_full.t.md  researcher_with_traits.t.md  rl_router.t.md  skilled_agent.t.md  summarizer_with_promotion.t.md  trainable_perception.t.md  vault_assistant.t.md  vetted_responder.t.md  welfare_agent.t.md  wire_tool.t.md  wire_tool_execute.t.md
tessera/: __init__.py  abductive.py  analogy.py  argumentative.py  ast_substrate.py  bayesian.py  cache.py  calibration.py  capabilities.py  causal.py  cli.py  counterfactual.py  dual_process.py  evolve.py  governance.py  gricean.py  hindsight.py  iit.py  moral_foundations.py  policy_lang.py  precaution.py  rl.py  substrate_docs.py  tom.py  training.py  training_corpus.py  traits.py  welfare.py
tests/: conftest.py  test_abductive.py  test_analogy.py  test_argumentative.py  test_ast.py  test_auto_confidence.py  test_bench.py  (+34 more)
(+42 files in other folders)
