[project]
name = "tessera"
version = "0.0.1"
description = "Markdown-native, BDI-structured, triple-compiled language for agentic AI"
requires-python = ">=3.11"
authors = [{ name = "James Walton" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
aeon = []
synapse = []
anthropic = ["anthropic>=0.34"]
langchain = ["langchain>=0.3", "langchain-community>=0.3"]
torch = ["torch>=2.4"]
all = ["anthropic>=0.34", "langchain>=0.3", "langchain-community>=0.3", "torch>=2.4"]
dev = ["pytest>=7.0"]

[project.scripts]
tessera = "tessera.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tessera*"]
